--- a/Cleaning_data.ipynb
+++ b/Cleaning_data.ipynb
@@ -9,6 +9,505 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "import pandas as pd\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ride_id</th>\n",
+       "      <th>rideable_type</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>end_lat</th>\n",
+       "      <th>end_lng</th>\n",
+       "      <th>member_casual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DAE3C13A5FAAB089</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-29 16:02:20</td>\n",
+       "      <td>2023-12-29 16:10:17</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Communipaw &amp; Berry Lane</td>\n",
+       "      <td>JC084</td>\n",
+       "      <td>40.724016</td>\n",
+       "      <td>-74.050550</td>\n",
+       "      <td>40.714358</td>\n",
+       "      <td>-74.066611</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1EC6BE46ACF2DE11</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-06 01:58:32</td>\n",
+       "      <td>2023-12-06 02:04:48</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Oakland Ave</td>\n",
+       "      <td>JC022</td>\n",
+       "      <td>40.724135</td>\n",
+       "      <td>-74.050686</td>\n",
+       "      <td>40.737604</td>\n",
+       "      <td>-74.052478</td>\n",
+       "      <td>casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>105CA439B9CBF57C</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-06 20:15:11</td>\n",
+       "      <td>2023-12-06 20:21:02</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Oakland Ave</td>\n",
+       "      <td>JC022</td>\n",
+       "      <td>40.723990</td>\n",
+       "      <td>-74.050639</td>\n",
+       "      <td>40.737604</td>\n",
+       "      <td>-74.052478</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DC1C46F6090FA1DB</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-09 13:54:19</td>\n",
+       "      <td>2023-12-09 13:56:48</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Manila &amp; 1st</td>\n",
+       "      <td>JC082</td>\n",
+       "      <td>40.723983</td>\n",
+       "      <td>-74.050732</td>\n",
+       "      <td>40.721651</td>\n",
+       "      <td>-74.042884</td>\n",
+       "      <td>casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>04EAEAAD6D32A664</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-02 17:30:34</td>\n",
+       "      <td>2023-12-02 17:37:26</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Riverview Park</td>\n",
+       "      <td>JC057</td>\n",
+       "      <td>40.724011</td>\n",
+       "      <td>-74.050686</td>\n",
+       "      <td>40.744319</td>\n",
+       "      <td>-74.043991</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ride_id rideable_type           started_at             ended_at  \\\n",
+       "0  DAE3C13A5FAAB089  classic_bike  2023-12-29 16:02:20  2023-12-29 16:10:17   \n",
+       "1  1EC6BE46ACF2DE11  classic_bike  2023-12-06 01:58:32  2023-12-06 02:04:48   \n",
+       "2  105CA439B9CBF57C  classic_bike  2023-12-06 20:15:11  2023-12-06 20:21:02   \n",
+       "3  DC1C46F6090FA1DB  classic_bike  2023-12-09 13:54:19  2023-12-09 13:56:48   \n",
+       "4  04EAEAAD6D32A664  classic_bike  2023-12-02 17:30:34  2023-12-02 17:37:26   \n",
+       "\n",
+       "  start_station_name start_station_id         end_station_name end_station_id  \\\n",
+       "0       Brunswick St            JC023  Communipaw & Berry Lane          JC084   \n",
+       "1       Brunswick St            JC023              Oakland Ave          JC022   \n",
+       "2       Brunswick St            JC023              Oakland Ave          JC022   \n",
+       "3       Brunswick St            JC023             Manila & 1st          JC082   \n",
+       "4       Brunswick St            JC023           Riverview Park          JC057   \n",
+       "\n",
+       "   start_lat  start_lng    end_lat    end_lng member_casual  \n",
+       "0  40.724016 -74.050550  40.714358 -74.066611        member  \n",
+       "1  40.724135 -74.050686  40.737604 -74.052478        casual  \n",
+       "2  40.723990 -74.050639  40.737604 -74.052478        member  \n",
+       "3  40.723983 -74.050732  40.721651 -74.042884        casual  \n",
+       "4  40.724011 -74.050686  40.744319 -74.043991        member  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read Dec 2023 CSV file\n",
+    "dec_csv_path = Path(\"Resources/JC-202312-citibike-tripdata.csv\")\n",
+    "dec_df = pd.read_csv(dec_csv_path)\n",
+    "dec_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ride_id</th>\n",
+       "      <th>rideable_type</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>end_lat</th>\n",
+       "      <th>end_lng</th>\n",
+       "      <th>member_casual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0744109F13385D1D</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-01-15 15:18:07</td>\n",
+       "      <td>2024-01-15 15:32:44</td>\n",
+       "      <td>Morris Canal</td>\n",
+       "      <td>JC072</td>\n",
+       "      <td>Oakland Ave</td>\n",
+       "      <td>JC022</td>\n",
+       "      <td>40.712297</td>\n",
+       "      <td>-74.038185</td>\n",
+       "      <td>40.737604</td>\n",
+       "      <td>-74.052478</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B1488BFEF9118000</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2024-01-13 15:32:50</td>\n",
+       "      <td>2024-01-13 15:36:18</td>\n",
+       "      <td>JC Medical Center</td>\n",
+       "      <td>JC110</td>\n",
+       "      <td>Grove St PATH</td>\n",
+       "      <td>JC115</td>\n",
+       "      <td>40.715391</td>\n",
+       "      <td>-74.049692</td>\n",
+       "      <td>40.719410</td>\n",
+       "      <td>-74.043090</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>95A2FE8E51B4C836</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2024-01-19 13:11:00</td>\n",
+       "      <td>2024-01-19 13:14:44</td>\n",
+       "      <td>Morris Canal</td>\n",
+       "      <td>JC072</td>\n",
+       "      <td>Exchange Pl</td>\n",
+       "      <td>JC116</td>\n",
+       "      <td>40.712419</td>\n",
+       "      <td>-74.038526</td>\n",
+       "      <td>40.716366</td>\n",
+       "      <td>-74.034344</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>95D9AFF6A1652DC1</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2024-01-23 07:03:49</td>\n",
+       "      <td>2024-01-23 07:07:11</td>\n",
+       "      <td>Morris Canal</td>\n",
+       "      <td>JC072</td>\n",
+       "      <td>Exchange Pl</td>\n",
+       "      <td>JC116</td>\n",
+       "      <td>40.712419</td>\n",
+       "      <td>-74.038526</td>\n",
+       "      <td>40.716366</td>\n",
+       "      <td>-74.034344</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5F7408988A83B1B3</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2024-01-01 16:46:10</td>\n",
+       "      <td>2024-01-01 16:50:31</td>\n",
+       "      <td>Morris Canal</td>\n",
+       "      <td>JC072</td>\n",
+       "      <td>Harborside</td>\n",
+       "      <td>JC104</td>\n",
+       "      <td>40.712419</td>\n",
+       "      <td>-74.038526</td>\n",
+       "      <td>40.719252</td>\n",
+       "      <td>-74.034234</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ride_id  rideable_type           started_at             ended_at  \\\n",
+       "0  0744109F13385D1D  electric_bike  2024-01-15 15:18:07  2024-01-15 15:32:44   \n",
+       "1  B1488BFEF9118000   classic_bike  2024-01-13 15:32:50  2024-01-13 15:36:18   \n",
+       "2  95A2FE8E51B4C836   classic_bike  2024-01-19 13:11:00  2024-01-19 13:14:44   \n",
+       "3  95D9AFF6A1652DC1   classic_bike  2024-01-23 07:03:49  2024-01-23 07:07:11   \n",
+       "4  5F7408988A83B1B3   classic_bike  2024-01-01 16:46:10  2024-01-01 16:50:31   \n",
+       "\n",
+       "  start_station_name start_station_id end_station_name end_station_id  \\\n",
+       "0       Morris Canal            JC072      Oakland Ave          JC022   \n",
+       "1  JC Medical Center            JC110    Grove St PATH          JC115   \n",
+       "2       Morris Canal            JC072      Exchange Pl          JC116   \n",
+       "3       Morris Canal            JC072      Exchange Pl          JC116   \n",
+       "4       Morris Canal            JC072       Harborside          JC104   \n",
+       "\n",
+       "   start_lat  start_lng    end_lat    end_lng member_casual  \n",
+       "0  40.712297 -74.038185  40.737604 -74.052478        member  \n",
+       "1  40.715391 -74.049692  40.719410 -74.043090        member  \n",
+       "2  40.712419 -74.038526  40.716366 -74.034344        member  \n",
+       "3  40.712419 -74.038526  40.716366 -74.034344        member  \n",
+       "4  40.712419 -74.038526  40.719252 -74.034234        member  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# read Jan 2024 CSV file\n",
+    "jan_csv_path = Path(\"Resources/JC-202401-citibike-tripdata.csv\")\n",
+    "jan_df = pd.read_csv(jan_csv_path)\n",
+    "jan_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ride_id                object\n",
+       "rideable_type          object\n",
+       "started_at             object\n",
+       "ended_at               object\n",
+       "start_station_name     object\n",
+       "start_station_id       object\n",
+       "end_station_name       object\n",
+       "end_station_id         object\n",
+       "start_lat             float64\n",
+       "start_lng             float64\n",
+       "end_lat               float64\n",
+       "end_lng               float64\n",
+       "member_casual          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dec_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58680"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dec_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ride_id                object\n",
+       "rideable_type          object\n",
+       "started_at             object\n",
+       "ended_at               object\n",
+       "start_station_name     object\n",
+       "start_station_id       object\n",
+       "end_station_name       object\n",
+       "end_station_id         object\n",
+       "start_lat             float64\n",
+       "start_lng             float64\n",
+       "end_lat               float64\n",
+       "end_lng               float64\n",
+       "member_casual          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jan_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50661"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(jan_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "109341"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_rows = (len(dec_df) + len(jan_df))\n",
+    "total_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_df = pd.concat([dec_df, jan_df], ignore_index= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "109341"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(combined_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_df.to_csv(\"Resources/combined_citibike_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -16,8 +515,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
