--- a/Cleaning_data.ipynb
+++ b/Cleaning_data.ipynb
@@ -508,6 +508,164 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ride_id</th>\n",
+       "      <th>rideable_type</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>end_lat</th>\n",
+       "      <th>end_lng</th>\n",
+       "      <th>member_casual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DAE3C13A5FAAB089</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-29 16:02:20</td>\n",
+       "      <td>2023-12-29 16:10:17</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Communipaw &amp; Berry Lane</td>\n",
+       "      <td>JC084</td>\n",
+       "      <td>40.724016</td>\n",
+       "      <td>-74.050550</td>\n",
+       "      <td>40.714358</td>\n",
+       "      <td>-74.066611</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1EC6BE46ACF2DE11</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-06 01:58:32</td>\n",
+       "      <td>2023-12-06 02:04:48</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Oakland Ave</td>\n",
+       "      <td>JC022</td>\n",
+       "      <td>40.724135</td>\n",
+       "      <td>-74.050686</td>\n",
+       "      <td>40.737604</td>\n",
+       "      <td>-74.052478</td>\n",
+       "      <td>casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>105CA439B9CBF57C</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-06 20:15:11</td>\n",
+       "      <td>2023-12-06 20:21:02</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Oakland Ave</td>\n",
+       "      <td>JC022</td>\n",
+       "      <td>40.723990</td>\n",
+       "      <td>-74.050639</td>\n",
+       "      <td>40.737604</td>\n",
+       "      <td>-74.052478</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DC1C46F6090FA1DB</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-09 13:54:19</td>\n",
+       "      <td>2023-12-09 13:56:48</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Manila &amp; 1st</td>\n",
+       "      <td>JC082</td>\n",
+       "      <td>40.723983</td>\n",
+       "      <td>-74.050732</td>\n",
+       "      <td>40.721651</td>\n",
+       "      <td>-74.042884</td>\n",
+       "      <td>casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>04EAEAAD6D32A664</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-12-02 17:30:34</td>\n",
+       "      <td>2023-12-02 17:37:26</td>\n",
+       "      <td>Brunswick St</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>Riverview Park</td>\n",
+       "      <td>JC057</td>\n",
+       "      <td>40.724011</td>\n",
+       "      <td>-74.050686</td>\n",
+       "      <td>40.744319</td>\n",
+       "      <td>-74.043991</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ride_id rideable_type           started_at             ended_at  \\\n",
+       "0  DAE3C13A5FAAB089  classic_bike  2023-12-29 16:02:20  2023-12-29 16:10:17   \n",
+       "1  1EC6BE46ACF2DE11  classic_bike  2023-12-06 01:58:32  2023-12-06 02:04:48   \n",
+       "2  105CA439B9CBF57C  classic_bike  2023-12-06 20:15:11  2023-12-06 20:21:02   \n",
+       "3  DC1C46F6090FA1DB  classic_bike  2023-12-09 13:54:19  2023-12-09 13:56:48   \n",
+       "4  04EAEAAD6D32A664  classic_bike  2023-12-02 17:30:34  2023-12-02 17:37:26   \n",
+       "\n",
+       "  start_station_name start_station_id         end_station_name end_station_id  \\\n",
+       "0       Brunswick St            JC023  Communipaw & Berry Lane          JC084   \n",
+       "1       Brunswick St            JC023              Oakland Ave          JC022   \n",
+       "2       Brunswick St            JC023              Oakland Ave          JC022   \n",
+       "3       Brunswick St            JC023             Manila & 1st          JC082   \n",
+       "4       Brunswick St            JC023           Riverview Park          JC057   \n",
+       "\n",
+       "   start_lat  start_lng    end_lat    end_lng member_casual  \n",
+       "0  40.724016 -74.050550  40.714358 -74.066611        member  \n",
+       "1  40.724135 -74.050686  40.737604 -74.052478        casual  \n",
+       "2  40.723990 -74.050639  40.737604 -74.052478        member  \n",
+       "3  40.723983 -74.050732  40.721651 -74.042884        casual  \n",
+       "4  40.724011 -74.050686  40.744319 -74.043991        member  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
